src/types/tests/snapshots/tgbot__types__tests__message__edit_message_text-6.snap
---
source: src/types/tests/message.rs
expression: actual_form.into_fields()
---
[
    (
        "entities",
        FormValue::Text(
            "[{\"offset\":0,\"length\":4,\"type\":\"bold\"}]",
        ),
    ),
    (
        "inline_message_id",
        FormValue::Text(
            "msg-id",
        ),
    ),
    (
        "text",
        FormValue::Text(
            "text",
        ),
    ),
]
