src/types/tests/snapshots/tgbot__types__tests__message__edit_message_text.snap
---
source: src/types/tests/message.rs
expression: actual_form.into_fields()
---
[
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "message_id",
        FormValue::Text(
            "2",
        ),
    ),
    (
        "text",
        FormValue::Text(
            "text",
        ),
    ),
]
