src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_audio.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Audio::new(10, \"file-id\", \"file-unique-id\"), origin)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "audio": {
    "duration": 10,
    "file_id": "file-id",
    "file_unique_id": "file-unique-id"
  }
}
