src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_checklist.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Checklist::new([], \"test\"), origin)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "checklist": {
    "tasks": [],
    "title": "test"
  }
}
