src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_contact.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Contact::new(\"first-name\", \"+79001230099\"), origin)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "contact": {
    "first_name": "first-name",
    "phone_number": "+79001230099"
  }
}
