src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_dice.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Dice::new(DiceType::Basketball, 1), origin)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "dice": {
    "emoji": "🏀",
    "value": 1
  }
}
