src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_document.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Document::new(\"file-id\", \"file-unique-id\"), origin)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "document": {
    "file_id": "file-id",
    "file_unique_id": "file-unique-id"
  }
}
