src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_giveaway_winners.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(GiveawayWinners::new(ChannelChat::new(1, \"test\"), 1, 1,\n[User::new(1, \"test\", false)], 1), origin,)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "giveaway_winners": {
    "chat": {
      "type": "channel",
      "id": 1,
      "title": "test"
    },
    "giveaway_message_id": 1,
    "winner_count": 1,
    "winners": [
      {
        "first_name": "test",
        "id": 1,
        "is_bot": false
      }
    ],
    "winners_selection_date": 1
  }
}
